force-app/main/default/objects/OpportunityLineItem/fields/AcctSeed__GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GL Account Variable 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 2</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Opportunity Product (GL Account Variable 2)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>