force-app/main/default/objects/OpportunityLineItem/fields/Finance_Term__c.field-meta.xml
<CustomField>
    <fullName>Finance_Term__c</fullName>
    <formula>Opportunity.Finance_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>