force-app/main/default/objects/OpportunityLineItem/fields/InsuranceCoverage__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCoverage__c</fullName>
    <label>InsuranceCoverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Buyer Only</fullName>
                <isActive>false</isActive>
                <label>Buyer Only</label>
            </value>
            <value>
                <fullName>Co-Buyer Only</fullName>
                <isActive>false</isActive>
                <label>Co-Buyer Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>