force-app/main/default/objects/OpportunityLineItem/fields/IsInsuranceItem__c.field-meta.xml
<CustomField>
    <fullName>IsInsuranceItem__c</fullName>
    <formula>PricebookEntry.Product2.RecordType.Name = &#39;Insurance&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsInsuranceItem</label>
    <type>Checkbox</type>
</CustomField>