force-app/main/default/objects/OpportunityLineItem/fields/isPrepaid__c.field-meta.xml
<CustomField>
    <fullName>isPrepaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prepaid</label>
    <type>Checkbox</type>
</CustomField>