force-app/main/default/objects/OpportunityLineItem/fields/IsTaxable__c.field-meta.xml
<CustomField>
    <fullName>IsTaxable__c</fullName>
    <formula>PricebookEntry.Product2.Taxable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTaxable</label>
    <type>Checkbox</type>
</CustomField>