force-app/main/default/objects/OpportunityLineItem/fields/ProductImage__c.field-meta.xml
<CustomField>
    <fullName>ProductImage__c</fullName>
    <formula>PricebookEntry.Product2.Default_Image_Thumb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>