force-app/main/default/objects/OpportunityLineItem/fields/TotalTaxes__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxes__c</fullName>
    <formula>IF( PricebookEntry.Product2.Taxable__c,
  IF( IsInsurance__c,
    IF( ISPICKVAL(Opportunity.taxationProvince__c , &apos;Quebec&apos;), 0,  TotalPrice *  Opportunity.ProvincialTaxRate__c ),
    TotalPrice * ( Opportunity.ProvincialTaxRate__c +   $Setup.Legend_Settings__c.FederalTaxRate__c ) ),
  0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalTaxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>